--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -103,6 +103,19 @@ jobs:
           CONFIG_TARGET_x86=y
           CONFIG_TARGET_x86_64=y
           CONFIG_TARGET_x86_64_Generic=y
+          CONFIG_TARGET_ROOTFS_EXT4FS=y
+          CONFIG_TARGET_EXT4_RESERVED_PCT=0
+          CONFIG_TARGET_EXT4_BLOCKSIZE_4K=y
+          CONFIG_TARGET_EXT4_BLOCKSIZE=4096
+          CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
+          CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
+          CONFIG_GRUB_IMAGES=y
+          CONFIG_GRUB_CONSOLE=y
+          CONFIG_GRUB_SERIAL="ttyS0"
+          CONFIG_GRUB_BAUDRATE=115200
+          CONFIG_GRUB_BOOTOPTS=""
+          CONFIG_GRUB_TIMEOUT="0"
+          CONFIG_GRUB_TITLE="OpenWrt"
           EOF          
          
           # 固件压缩:
